# holda

./: Cargo.toml  README.md  jj-init.ps1
examples/name_no_serde/: Cargo.toml
examples/name_no_serde/src/: main.rs
examples/name_serde/: Cargo.toml
examples/name_serde/src/: main.rs
holda_derive/: Cargo.toml
holda_derive/src/: lib.rs
holda_derive/tests/: string_wrapper.rs
src/: lib.rs
tests/: arc_wrapper.rs  custom_struct_wrapper.rs  numeric_wrapper.rs  rc_wrapperr.rs  string_wrapper.rs  unit_wrapper.rs  uuid_wrapper.rs
