cargo-features=["test-dummy-unstable"]

[package]
name = "holda_derive"
version = "0.1.0"
edition = "2024"
im-a-teapot = false
description = "Macros for holda crate"
authors = ["TeamDman"]
license = "MPL-2.0"
repository = "https://github.com/TeamDman/holda.git"
readme = "../README.md"
keywords = ["holda","serde","derive","holder","string-holder"]
categories = ["development-tools"]


[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.100"

[dev-dependencies]
eyre = "0.6.12"
serde = "1.0.219" # the crates that depend on this crate will also need to depend on serde I think lol
